cmake_minimum_required(VERSION 3.9)
project(Nachos_Operating_Systems_Course)

set(CMAKE_CXX_STANDARD 11)

add_executable(Nachos_Operating_Systems_Course
        nachos-3.4/c++example/copyright.h
        nachos-3.4/c++example/inheritstack.cc
        nachos-3.4/c++example/inheritstack.h
        nachos-3.4/c++example/list.cc
        nachos-3.4/c++example/list.h
        nachos-3.4/c++example/stack.cc
        nachos-3.4/c++example/stack.h
        nachos-3.4/c++example/templatestack.cc
        nachos-3.4/c++example/templatestack.h
        nachos-3.4/code/bin/coff.h
        nachos-3.4/code/bin/coff2flat.c
        nachos-3.4/code/bin/coff2noff.c
        nachos-3.4/code/bin/d.c
        nachos-3.4/code/bin/disasm.c
        nachos-3.4/code/bin/encode.h
        nachos-3.4/code/bin/execute.c
        nachos-3.4/code/bin/instr.h
        nachos-3.4/code/bin/int.h
        nachos-3.4/code/bin/main.c
        nachos-3.4/code/bin/noff.h
        nachos-3.4/code/bin/opstrings.c
        nachos-3.4/code/bin/out.c
        nachos-3.4/code/bin/system.c
        nachos-3.4/code/filesys/directory.cc
        nachos-3.4/code/filesys/directory.h
        nachos-3.4/code/filesys/filehdr.cc
        nachos-3.4/code/filesys/filehdr.h
        nachos-3.4/code/filesys/filesys.cc
        nachos-3.4/code/filesys/filesys.h
        nachos-3.4/code/filesys/fstest.cc
        nachos-3.4/code/filesys/openfile.cc
        nachos-3.4/code/filesys/openfile.h
        nachos-3.4/code/filesys/synchdisk.cc
        nachos-3.4/code/filesys/synchdisk.h
        nachos-3.4/code/machine/console.cc
        nachos-3.4/code/machine/console.h
        nachos-3.4/code/machine/disk.cc
        nachos-3.4/code/machine/disk.h
        nachos-3.4/code/machine/interrupt.cc
        nachos-3.4/code/machine/interrupt.h
        nachos-3.4/code/machine/machine.cc
        nachos-3.4/code/machine/machine.h
        nachos-3.4/code/machine/mipssim.cc
        nachos-3.4/code/machine/mipssim.h
        nachos-3.4/code/machine/network.cc
        nachos-3.4/code/machine/network.h
        nachos-3.4/code/machine/stats.cc
        nachos-3.4/code/machine/stats.h
        nachos-3.4/code/machine/sysdep.cc
        nachos-3.4/code/machine/sysdep.h
        nachos-3.4/code/machine/timer.cc
        nachos-3.4/code/machine/timer.h
        nachos-3.4/code/machine/translate.cc
        nachos-3.4/code/machine/translate.h
        nachos-3.4/code/network/nettest.cc
        nachos-3.4/code/network/post.cc
        nachos-3.4/code/network/post.h
        nachos-3.4/code/test/halt.c
        nachos-3.4/code/test/matmult.c
        nachos-3.4/code/test/shell.c
        nachos-3.4/code/test/sort.c
        nachos-3.4/code/test/start.c
        nachos-3.4/code/threads/bool.h
        nachos-3.4/code/threads/copyright.h
        nachos-3.4/code/threads/list.cc
        nachos-3.4/code/threads/list.h
        nachos-3.4/code/threads/main.cc
        nachos-3.4/code/threads/MultiLevelQueueScheduler.cc
        nachos-3.4/code/threads/MultiLevelQueueScheduler.h
        nachos-3.4/code/threads/PriorityQueueScheduler.cc
        nachos-3.4/code/threads/PriorityQueueScheduler.h
        nachos-3.4/code/threads/scheduler.cc
        nachos-3.4/code/threads/scheduler.h
        nachos-3.4/code/threads/sjf.cc
        nachos-3.4/code/threads/sjf.h
        nachos-3.4/code/threads/stdarg-old.h
        nachos-3.4/code/threads/stdarg-tmp.h
        nachos-3.4/code/threads/struct.cc
        nachos-3.4/code/threads/struct.h
        nachos-3.4/code/threads/switch.c
        nachos-3.4/code/threads/switch.h
        nachos-3.4/code/threads/synch.cc
        nachos-3.4/code/threads/synch.h
        nachos-3.4/code/threads/synchlist.cc
        nachos-3.4/code/threads/synchlist.h
        nachos-3.4/code/threads/system.cc
        nachos-3.4/code/threads/system.h
        nachos-3.4/code/threads/thread.cc
        nachos-3.4/code/threads/thread.h
        nachos-3.4/code/threads/threadtest.cc
        nachos-3.4/code/threads/utility.cc
        nachos-3.4/code/threads/utility.h
        nachos-3.4/code/userprog/addrspace.cc
        nachos-3.4/code/userprog/addrspace.h
        nachos-3.4/code/userprog/bitmap.cc
        nachos-3.4/code/userprog/bitmap.h
        nachos-3.4/code/userprog/exception.cc
        nachos-3.4/code/userprog/progtest.cc
        nachos-3.4/code/userprog/syscall.h
        nachos-3.4/doc/course.ps
        nachos-3.4/doc/course.tex
        nachos-3.4/doc/filesys.ps
        nachos-3.4/doc/filesys.tex
        nachos-3.4/doc/mechanics.ps
        nachos-3.4/doc/mechanics.tex
        nachos-3.4/doc/nethelp.ps
        nachos-3.4/doc/nethelp.tex
        nachos-3.4/doc/network.ps
        nachos-3.4/doc/network.tex
        nachos-3.4/doc/overview.ps
        nachos-3.4/doc/overview.tex
        nachos-3.4/doc/reading.ms
        nachos-3.4/doc/README
        nachos-3.4/doc/thread.ps
        nachos-3.4/doc/thread.tex
        nachos-3.4/doc/userprog.ps
        nachos-3.4/doc/userprog.tex
        nachos-3.4/doc/vm.ps
        nachos-3.4/doc/vm.tex
        nachos-3.4/COPYRIGHT
        nachos-3.4/README
        Necessary_Packages/cse120su10-nachos.tar.gz
        Necessary_Packages/mips-x86.linux-xgcc.tgz
        LICENSE
        README.md)
